Add update user method
