# api/v1/docs/swagger.json
@@ -69,39 +69,6 @@
                         }
                     }
                 }
-            },
-            "post": {
-                "description": "Creates a new user.",
-                "tags": [
-                    "users"
-                ],
-                "summary": "Create user",
-                "operationId": "CreateUser",
-                "parameters": [
-                    {
-                        "description": "User",
-                        "name": "user",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/controllers.CreateUserDTO"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/models.User"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/models.APIError"
-                        }
-                    }
-                }
             }
         },
         "/users/{id}": {
@@ -135,11 +102,56 @@
                         }
                     }
                 }
+            },
+            "put": {
+                "security": [
+                    {
+                        "AccessToken": []
+                    }
+                ],
+                "description": "Update matching user with provided data.",
+                "tags": [
+                    "users"
+                ],
+                "summary": "Update user",
+                "operationId": "UpdateUser",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "User ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "User",
+                        "name": "user",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/controllers.UpdateUserDTO"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.User"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/models.APIError"
+                        }
+                    }
+                }
             }
         }
     },
     "definitions": {
-        "controllers.CreateUserDTO": {
+        "controllers.UpdateUserDTO": {
             "type": "object",
             "required": [
                 "name"
@@ -153,8 +165,7 @@
                     "type": "string"
                 },
                 "gender": {
-                    "type": "string",
-                    "example": "Male"
+                    "type": "string"
                 },
                 "name": {
                     "type": "string"
